# australiaHomeaffairsNewsPush

./: README.md  config.toml  main.py  pyproject.toml  requirements.txt
utils/: getNews.py  translator.py  xmlParser.py
