[project]
name = "australiahomeaffairsnewspush"
version = "0.1.0"
description = "澳大利亚移民局官方消息采集推送"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "requests>=2.32.5",
    "websocket>=0.2.1",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
